# SigmaBoy

./: .gitignore  CMakeLists.txt
include/: cartridge.h  cpu.h  emulator.h  memory_map.h  mmu.h  ppu.h  registers.h  status.h
src/: cartridge.cpp  cpu.cpp  emulator.cpp  emulator.h  main.cpp  memory_map.cpp  mmu.cpp  ppu.cpp
